<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#75B9Bf"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:paddingVertical="50dp">
        <TextView
            android:id="@+id/tvOldInput"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:gravity="right|center_vertical"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:paddingHorizontal="30dp"
            android:text=""
            tools:ignore="RtlHardcoded" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCurrentOperand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:gravity="center_vertical|left"
                android:paddingStart="50dp"
                android:text=""
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/tvInput"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="right|center_vertical"
                android:paddingHorizontal="30dp"
                android:text="@string/_0"
                android:textColor="#FFFFFFFF"
                android:textSize="40sp"
                tools:ignore="RtlHardcoded,TextSizeCheck" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/allClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation"
            android:text="@string/ac"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#FFFFFFFF"
            android:background="@drawable/button_click_animation"
            android:text="@string/cBtn" />


        <ImageButton
            android:id="@+id/btnBackspace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:background="@drawable/button_click_animation"
            android:src="@drawable/img_backspace"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/green"
            android:text="@string/divideBtn" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/_7"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/_8"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/_9"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:text="@string/multiplyBtn"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/_4"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/_5"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/_6"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/green"
            android:text="@string/minusBtn"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/_1"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/_2"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/_3"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnPLus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/green"
            android:text="@string/additionBtn"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/dotBtn"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btnZero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_click_animation"
            android:textColor="@color/white"
            android:text="@string/_0btn"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />



        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:textSize="20sp"
            android:background="@drawable/button_click_animation_eqlbtn"
            android:textColor="@color/white"
            android:text="@string/equalBtn"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>